--- a/src/style.scss
+++ b/src/style.scss
@@ -5,15 +5,16 @@
 body {
 	background: #eee;
 	-webkit-text-size-adjust: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans',
+		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 	font-size: 18px;
 }
 
-h1, 
-h2, 
-h3, 
-h4, 
-h5, 
+h1,
+h2,
+h3,
+h4,
+h5,
 h6 {
 	margin-top: 0;
 	box-sizing: border-box;
@@ -22,7 +23,7 @@ h6 {
 
 input,
 button {
-	border: 1px solid #CCC;
+	border: 1px solid #ccc;
 	padding: 0.25em;
 	appearance: none;
 	background: none;
